Changelog
=========

1.2 (unreleased)
----------------

- Nothing changed yet.


1.1 (2013-05-24)
----------------

- Move subsite css viewlet into plone.portaltop manager.
  [mathias.leimgruber]

- Use plone default reference widget to make references between
  subsites (lanaguage selector).
  [mathias.leimgruber]

- Find banner images recursively.
  [mathias.leimgruber]


1.0 (2013-04-17)
----------------

- inital release
