@@ -4,7 +4,8 @@ Changelog
 1.2 (unreleased)
 ----------------
 
-- Nothing changed yet.
+- Updated translations for teaser portlet.
+  [Julian Infanger]
 
 
 1.1 (2013-05-24)
